--- a/report/pers_schedule/biometrics_submission/bibliography.bib
+++ b/report/pers_schedule/biometrics_submission/bibliography.bib
@@ -1,7 +1,7 @@
 @article{bokhorst2015compliance,
-title={Compliance rates with the Prostate Cancer Research International Active Surveillance (PRIAS) protocol and disease reclassification in noncompliers},
-author={Bokhorst, Leonard P and Alberts, Arnout R and Rannikko, Antti and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Bangma, Chris H and Roobol, Monique J and PRIAS study group and others},
-journal={European urology},
+title={Compliance rates with the {Prostate Cancer Research International Active Surveillance (PRIAS)} protocol and disease reclassification in noncompliers},
+author={Bokhorst, Leonard P and Alberts, Arnout R and Rannikko, Antti and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Bangma, Chris H and Roobol, Monique J and {PRIAS} study group and others},
+journal={European Urology},
 volume={68},
 number={5},
 pages={814--821},
@@ -9,8 +9,60 @@ year={2015},
 publisher={Elsevier}
 }
 
+@article{zhang2012optimization,
+  title={Optimization of prostate biopsy referral decisions},
+  author={Zhang, Jingyu and Denton, Brian T and Balasubramanian, Hari and Shah, Nilay D and Inman, Brant A},
+  journal={Manufacturing \& Service Operations Management},
+  volume={14},
+  number={4},
+  pages={529--547},
+  year={2012},
+  publisher={INFORMS}
+}
+
+@article{erenay2014optimizing,
+  title={Optimizing colonoscopy screening for colorectal cancer prevention and surveillance},
+  author={Erenay, Fatih Safa and Alagoz, Oguzhan and Said, Adnan},
+  journal={Manufacturing \& Service Operations Management},
+  volume={16},
+  number={3},
+  pages={381--400},
+  year={2014},
+  publisher={INFORMS}
+}
+
+@article{akhavan2017markov,
+  title={A Markov decision process model for cervical cancer screening policies in Colombia},
+  author={Akhavan-Tabatabaei, Raha and S{\'a}nchez, Diana Marcela and Yeung, Thomas G},
+  journal={Medical Decision Making},
+  volume={37},
+  number={2},
+  pages={196--211},
+  year={2017},
+  publisher={SAGE Publications}
+}
+
+@article{ayer2012or,
+  title={A {POMDP} approach to personalize mammography screening decisions},
+  author={Ayer, Turgay and Alagoz, Oguzhan and Stout, Natasha K},
+  journal={Operations Research},
+  volume={60},
+  number={5},
+  pages={1019--1034},
+  year={2012},
+  publisher={INFORMS}
+}
+
+@misc{priaswebsite,
+  author = {Roobol, Monique J and Bangma, Chris H},
+  title = {{PRIAS}},
+  howpublished = "\url{https://www.prias-project.org/}",
+  year = {2014}, 
+  note = "[Online; accessed 18-August-2014]"
+}
+
 @article{Gleason_interobs_var,
-title={Accuracy of biopsy Gleason scores from a large uropathology laboratory: use of a diagnostic protocol to minimize observer variability},
+title={Accuracy of biopsy {Gleason} scores from a large uropathology laboratory: use of a diagnostic protocol to minimize observer variability},
 author={Carlson, Grant D. and Calvanese, Christina B. and Kahane, Hillel and Epstein, Jonathan I.},
 journal={Urology},
 volume={51},
@@ -33,9 +85,9 @@ publisher={Wiley}
 
 
 @article{lopez2014optimalcutpoints,
-title={OptimalCutpoints: an R package for selecting optimal cutpoints in diagnostic tests},
+title={{OptimalCutpoints: an R package for selecting optimal cutpoints in diagnostic tests}},
 author={L{\'o}pez-Rat{\'o}n, M{\'o}nica and Rodr{\'\i}guez-{\'A}lvarez, Mar{\'\i}a Xos{\'e} and Cadarso-Su{\'a}rez, Carmen and Gude-Sampedro, Francisco and others},
-journal={Journal of statistical software},
+journal={Journal of Statistical Software},
 volume={61},
 number={8},
 pages={1--36},
@@ -80,7 +132,7 @@ publisher={Wiley}
 
 @article{rizopoulosJMbayes,
 author = {Dimitris Rizopoulos},
-title = {The R Package JMbayes for Fitting Joint Models for Longitudinal and Time-to-Event Data Using MCMC},
+title = {The {R} Package {JMbayes} for Fitting Joint Models for Longitudinal and Time-to-Event Data Using {MCMC}},
 journal = {Journal of Statistical Software},
 volume = {72},
 number = {7},
@@ -102,7 +154,7 @@ publisher={Elsevier}
 }
 
 @article{rizopoulos2014bma,
-title={Combining dynamic predictions from joint models for longitudinal and time-to-event data using Bayesian model averaging},
+title={{Combining Dynamic Predictions From Joint Models for Longitudinal and Time-to-Event Data Using Bayesian Model Averaging}},
 author={Rizopoulos, Dimitris and Hatfield, Laura A. and Carlin, Bradley P. and Takkenberg, Johanna J.M.},
 journal={Journal of the American Statistical Association},
 volume={109},
@@ -114,9 +166,9 @@ publisher={Taylor \& Francis}
 
 
 @article{brown2009assessing,
-title={Assessing the association between trends in a biomarker and risk of event with an application in pediatric HIV/AIDS},
+title={Assessing the association between trends in a biomarker and risk of event with an application in pediatric {HIV/AIDS}},
 author={Brown, Elizabeth R.},
-journal={The annals of applied statistics},
+journal={The Annals of Applied Statistics},
 volume={3},
 number={3},
 pages={1163--1182},
@@ -125,9 +177,9 @@ publisher={Institute of Mathematical Statistics}
 }
 
 @article{lang2004bayesian,
-title={Bayesian P-splines},
+title={{Bayesian P-splines}},
 author={Lang, Stefan and Brezger, Andreas},
-journal={Journal of computational and graphical statistics},
+journal={Journal of Computational and Graphical Statistics},
 volume={13},
 number={1},
 pages={183--212},
@@ -136,9 +188,9 @@ publisher={Taylor \& Francis}
 }
 
 @article{eilers1996flexible,
-title={Flexible smoothing with B-splines and penalties},
+title={Flexible smoothing with {B-splines} and penalties},
 author={Eilers, Paul HC and Marx, Brian D},
-journal={Statistical science},
+journal={Statistical Science},
 pages={89--121},
 year={1996},
 volume={11},
@@ -147,9 +199,9 @@ publisher={Institute of Mathematical Statistics}
 }
 
 @article{bokhorst2016decade,
-title={A decade of active surveillance in the PRIAS study: an update and evaluation of the criteria used to recommend a switch to active treatment},
+title={A decade of active surveillance in the {PRIAS} study: an update and evaluation of the criteria used to recommend a switch to active treatment},
 author={Bokhorst, Leonard P and Valdagni, Riccardo and Rannikko, Antti and Kakehi, Yoshiyuki and Pickles, Tom and Bangma, Chris H and Roobol, Monique J and PRIAS study group and others},
-journal={European urology},
+journal={European Urology},
 volume={70},
 number={6},
 pages={954--960},
@@ -196,8 +248,20 @@ title = {Optimal screening schedules for disease progression with application to
 journal = {Biostatistics},
 year = {2017},
 doi = {10.1093/biostatistics/kxx009},
+note={\mbox{doi}:\url{10.1093/biostatistics/kxx009}},
 URL = { + https://doi.org/10.1093/biostatistics/kxx009},
 publisher={Oxford University Press}
+}
+
+@article {landmarking2017,
+author = {Rizopoulos, Dimitris and Molenberghs, Geert and Lesaffre, Emmanuel M.E.H.},
+title = {Dynamic predictions with time-dependent covariates in survival analysis using joint modeling and landmarking},
+journal = {Biometrical Journal},
+year = {2017},
+issn = {1521-4036},
+url = {http://dx.doi.org/10.1002/bimj.201600238},
+doi = {10.1002/bimj.201600238},
+note={\mbox{doi}:\url{10.1002/bimj.201600238}},
 }
 
 @article{tsiatis2004joint,
@@ -212,7 +276,7 @@ publisher={Institute of Statistical Science, Academia Sinica}
 }
 
 @book{rizopoulos2012joint,
-title={Joint models for longitudinal and time-to-event data: With applications in R},
+title={Joint Models for Longitudinal and Time-to-Event Data: With Applications in R},
 author={Rizopoulos, Dimitris},
 year={2012},
 publisher={CRC Press},
@@ -228,7 +292,7 @@ publisher={Springer Science \& Business Media}
 }
 
 @book{robertBayesianChoice,
-title={The Bayesian choice: from decision-theoretic foundations to computational implementation},
+title={The {Bayesian} choice: from decision-theoretic foundations to computational implementation},
 author={Robert, Christian},
 year={2007},
 isbn = {9780387715995},
@@ -238,7 +302,7 @@ publisher={Springer Science \& Business Media}
 @article{welty2015extended,
 title={Extended followup and risk factors for disease reclassification in a large active surveillance cohort for localized prostate cancer},
 author={Welty, Christopher J and Cowan, Janet E and Nguyen, Hao and Shinohara, Katsuto and Perez, Nannette and Greene, Kirsten L and Chan, June M and Meng, Maxwell V and Simko, Jeffry P and Cooperberg, Matthew R and others},
-journal={The Journal of urology},
+journal={The Journal of Urology},
 volume={193},
 number={3},
 pages={807--811},
@@ -247,7 +311,7 @@ publisher={Elsevier}
 }
 
 @article{tosoian2011active,
-title={Active surveillance program for prostate cancer: an update of the Johns Hopkins experience},
+title={Active surveillance program for prostate cancer: an update of the {Johns Hopkins} experience},
 author={Tosoian, Jeffrey J and Trock, Bruce J and Landis, Patricia and Feng, Zhaoyong and Epstein, Jonathan I and Partin, Alan W and Walsh, Patrick C and Carter, H Ballentine},
 journal={Journal of Clinical Oncology},
 volume={29},
@@ -271,7 +335,7 @@ publisher={Wiley}
 @article{loeb2013systematic,
 title={Systematic review of complications of prostate biopsy},
 author={Loeb, Stacy and Vellekoop, Annelies and Ahmed, Hashim U and Catto, James and Emberton, Mark and Nam, Robert and Rosario, Derek J and Scattoni, Vincenzo and Lotan, Yair},
-journal={European urology},
+journal={European Urology},
 volume={64},
 number={6},
 pages={876--892},
@@ -282,7 +346,7 @@ publisher={Elsevier}
 @article{GlobalCancerStats2012,
 title={Global cancer statistics, 2012},
 author={Torre, Lindsey A and Bray, Freddie and Siegel, Rebecca L and Ferlay, Jacques and Lortet-Tieulent, Joannie and Jemal, Ahmedin},
-journal={CA: a cancer journal for clinicians},
+journal={CA: A Cancer Journal for Clinicians},
 volume={65},
 number={2},
 pages={87--108},
