--- a/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
@@ -1,18 +1,16 @@
 % !TEX root =  ../pers_schedules.tex 
 \section{Introduction}
 \label{sec : introduction}
-In this decade prostate cancer is the second most frequently diagnosed cancer (14\% of all cancers) in males worldwide \citep{GlobalCancerStats2012}, and the most frequent (19\% of all cancers in USA alone) in economically developed countries \citep*{USACancerStats2017}. The increase in diagnosis of low grade prostate cancers has been attributed to increase in life expectancy and increase in number of screening programs \citep{potoskyPSAcancer}. A major issue of screening programs that also has been established in other types of cancers (e.g. breast cancer) is over-diagnosis. To avoid overtreatment, patients diagnosed with low grade prostate cancer are often motivated to join active surveillance (AS) programs. The goal of AS is to routinely examine the progression of prostate cancer and avoid serious treatments such as surgery or chemotherapy as long as they are not needed.
+In this decade prostate cancer is the second most frequently diagnosed cancer (14\% of all cancers) in males worldwide, with nearly 67\% of all prostate cancer cases reported in developed countries \citep{GlobalCancerStats2012}. The increase in diagnosis of low grade prostate cancers has been attributed to increase in life expectancy and increase in number of screening programs \citep{potoskyPSAcancer}. A major issue of screening programs that also has been established in other types of cancers (e.g., breast cancer) is over-diagnosis. To avoid overtreatment, patients diagnosed with low grade prostate cancer are often motivated to join active surveillance (AS) programs. The goal of AS is to routinely examine the progression of prostate cancer and avoid serious treatments such as surgery or chemotherapy as long as they are not needed.
 
-Currently the largest AS program worldwide is Prostate Cancer Research International Active Surveillance (PRIAS) \citep{bokhorst2015compliance}. Patients enrolled in PRIAS are closely monitored using serum prostate-specific antigen (PSA) levels, digital rectal examination (DRE) and repeat prostate biopsies. Results from biopsies are graded on a scale called Gleason, which takes values between 2 and 10, with 10 corresponding to a serious state of the disease. At the time of induction in PRIAS, patients must have a Gleason score of 6 or less, DRE score of cT2c or less and a PSA of 10 ng/mL or less. In PRIAS a PSA doubling time(PSA-DT), measured as the inverse of the slope of regression line through the base 2 logarithm of PSA values, of less than 3 years indicates of prostate cancer progression. However until either DRE or Gleason are observed to be higher than the aforementioned thresholds, patients are not removed from AS for curative treatment \citep{bokhorst2016decade}. When the Gleason score becomes greater than 6, it is also known as Gleason reclassification (referred to as GR hereafter).
+Currently the largest AS program worldwide is Prostate Cancer Research International Active Surveillance, also known as PRIAS \citep{bokhorst2016decade}. Patients enrolled in PRIAS are closely monitored using serum prostate-specific antigen (PSA) levels, digital rectal examination (DRE) and repeat prostate biopsies. Results from biopsies are graded on a scale called Gleason, which takes values between 2 and 10, with 10 corresponding to a serious state of the disease. At the time of induction in PRIAS, patients must have a Gleason score of 6 or less, DRE score of cT2c or less and a PSA of 10 ng/mL or less. In PRIAS, a PSA doubling time (PSA-DT) of less than 3 years indicates prostate cancer progression, where PSA-DT is measured as the inverse of the slope of regression line through the base 2 logarithm of PSA values. However until either DRE or Gleason are observed to be higher than the aforementioned thresholds, patients are not removed from AS for curative treatment \citep{bokhorst2016decade}. When the Gleason score becomes greater than 6, it is also known as Gleason reclassification (referred to as GR hereafter).
 
-Biopsies are reliable but they are also difficult to conduct, cause pain and have serious side effects such as hematuria and sepsis \citep{loeb2013systematic}. Due to these reasons majority of the AS programs worldwide strongly adhere to not having more than 1 biopsy per year. Performing a biopsy annually (we refer to it as annual schedule hereafter) has the advantage that GR can be detected within 1 year of its occurrence. The drawbacks of annual schedule although, are not only medical but also financial. \citet{keegan2012active} have shown that annual schedules can cost more than the treatment (brachytherapy or prostatectomy) to AS programs, and if biopsies were to be conducted every other year, then up to 28\% increase in savings from AS over treatment could be achieved per head. Despite this, several AS programs employ the annual schedule \citep{tosoian2011active,welty2015extended}.
+Biopsies are reliable but they are also difficult to conduct, cause pain and have serious side effects such as hematuria and sepsis \citep{loeb2013systematic}. Due to these reasons, majority of the AS programs worldwide strongly advise at most one biopsy per year. Conducting a biopsy annually (we refer to it as annual schedule hereafter) has the advantage that GR can be detected within one year of its occurrence. The drawbacks of annual schedule although, are not only medical but also financial. \citet{keegan2012active} have shown that annual schedules can cost more than the treatment (brachytherapy or prostatectomy) to AS programs, and if biopsies were to be conducted every other year, then up to 28\% increase in savings per head from AS over treatment could be achieved. Despite this, several AS programs employ the annual schedule \citep{tosoian2011active,welty2015extended}.
 
-The PRIAS schedule is less rigorous than annual schedule and yet it has a high non-compliance rate for repeat biopsies \citet{bokhorst2015compliance}. Such non-compliance reduces the effectiveness of AS programs because progression is detected late. The PRIAS schedule and compliance rates are, one biopsy each at year 1 (81\%), year 4 (60\%), year 7 (53\%) and year 10 (33\%). After year 10 biopsies are conducted every 5 years. An exception is made, if at any time a patient has PSA-DT less than 10 years, wherein annual schedule for biopsy is prescribed. When fixed schedules are prescribed to  patients whose cancer progresses slowly, they often end up having unnecessary biopsies. For patients with rapidly progressing cancer, crude measures such as PSA-DT are employed to decide timing of biopsies. The fact that existing schedules require improvement is also evident in some of the reasons given by patients for non-compliance: \textquoteleft patient does not want biopsy\textquoteright, \textquoteleft PSA stable\textquoteright, \textquoteleft complications on last biopsy\textquoteright and \textquoteleft no signs of disease progression on previous biopsy\textquoteright.
+A drawback of existing biopsy schedules is that they conduct unnecessary biopsies for patients with slowly progressing disease. This has lead to a high non-compliance rate for repeat biopsies \citep{bokhorst2015compliance}. In PRIAS some of the reasons reported for non-compliance were: \textquoteleft patient does not want biopsy\textquoteright, \textquoteleft complications on last biopsy\textquoteright and \textquoteleft no signs of disease progression on previous biopsy\textquoteright. Non-compliance reduces the effectiveness of AS programs because progression is detected late. The PRIAS schedule and the compliance rates are: one biopsy each at year 1 (81\%), year 4 (60\%), year 7 (53\%) and year 10 (33\%). After year 10 biopsies are conducted every five years. An exception is made, if at any time a patient has PSA-DT less than 10 years, wherein annual schedule is prescribed. The reason to use PSA-DT in the scheduling process is that it was found to be indicative of GR in PRIAS \citep{bokhorst2015compliance}. It is important to note that measurement of PSA has a high compliance rate of 91\% in PRIAS. This is because PSA is easy to obtain and measuring PSA does not lead to any side effects.
 
-This paper is motivated by the need to reduce the burden of biopsies and most optimally find the onset of GR (schedule for measurement of DRE is not of interest since it is a non invasive procedure and has no serious medical implications). To this end, we intend to create schedules for biopsies which improve upon the PRIAS and annual schedule. For this purpose, one approach which stands out in particular in literature is personalized scheduling. That is, a different schedule for every patient and/or scenario. For e.g. Cost optimized personalized schedules based on Markov models have been proposed by \citet{bebu2017OptimalScreening}. Cost optimized personalized equi-spaced screening intervals, using Microsimulation Screening Analysis (MISCAN) models have been proposed by \citet{oMahonyOptimaInterval}. \citet{parmigiani1998designing} have used information theory to come up with schedules for detecting time to event in the smallest possible time interval. Most of these methods however create an entire schedule in advance. In contrast \citet{drizopoulosPersScreening} have proposed dynamic personalized schedules for longitudinal biomarkers using the framework of joint models for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint}.
+This paper is motivated by the need to reduce the burden of biopsies and most optimally find the onset of GR. To this end, we intend to create personalized schedules for biopsies which improve upon the PRIAS and annual schedule. That is, a different schedule for every patient utilizing his recorded information. Personalized schedules for screening have received much interest in the literature, especially in the medical decision making context. For diabetic retinopathy, Markov models have been used by \citet{bebu2017OptimalScreening} to develop cost optimized personalized schedules. For breast cancer, personalized mammography screening policy based on the prior screening history and personal risk characteristics of women, using partially observable Markov decision process (MDP) models have been proposed by \citet*{ayer2012or}. MDP models have also been used to develop personalized screening policies for cervical cancer \citep*{akhavan2017markov} and colorectal cancer \citep*{erenay2014optimizing}. Another type of model called joint model for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint} has also been used to create personalized schedules, albeit for longitudinal biomarkers \citep{drizopoulosPersScreening}. In context of prostate cancer, \citet{zhang2012optimization} have used partially observable MDP models to personalize the decision of (not) deferring a biopsy to the next checkup time during the screening process. The decision is based on a discretized PSA level of the patient at the current check up time, and the baseline characteristics.
 
-The schedules we propose in this paper are tailored separately for every patient, and are dynamic. That is, biopsies are scheduled at different time points per patient utilizing his available PSA measurements and previous biopsy results up to that point in time. We achieve this using joint models. Based on these models we obtain a full specification of the joint distribution of the PSA levels and time of GR. We further use it to define a patient-specific posterior predictive distribution of the time of GR given the observed PSA measurements and previous biopsies. Using the general framework of Bayesian decision theory, we propose a set of loss functions which are minimized to find the optimal time of performing a biopsy. These loss functions yield us two categories of personalized schedules, those based on expected time of GR and those based on the risk of GR. We also analyze an approach where the two types of schedules are combined. To compare the proposed personalized schedules with the PRIAS and annual schedule we conduct a simulation study, and then discuss various metrics for evaluating the efficacy of each schedule, and a method to choose the most suitable one.
+Our work differs from the above referenced work in certain aspects. Firstly, the schedules we propose in this paper, account for the latent between-patient heterogeneity. We achieve this using joint models, which are inherently patient-specific because they utilize random effects. Secondly, joint models allow a continuous time scale and utilize the entire history of PSA levels. Lastly, instead of making a binary decision of (not) deferring a biopsy to the next check up time, we schedule biopsies at a per patient optimal future time, utilizing the historical PSA measurements and repeat biopsy results of the patient up to the current check up time. To this end, using joint models we first obtain a full specification of the joint distribution of PSA levels and time of GR. We then use it to define a patient-specific posterior predictive distribution of the time of GR given the observed PSA measurements and previous biopsies. Using the general framework of Bayesian decision theory, we propose a set of loss functions which are minimized to find the optimal time of conducting a biopsy. These loss functions yield us two categories of personalized schedules, those based on expected time of GR and those based on the risk of GR. We also analyze an approach where the two types of schedules are combined. To compare the proposed personalized schedules with the PRIAS and annual schedule we conduct a simulation study, and then discuss various criteria for evaluating the efficacy of each schedule, and a method to choose the most suitable one.
 
-The role of PSA measurements in personalized schedules is important, because PSA measurements are easy to obtain, and consequently they are cost effective. The PSA measurement process does not lead to any side effects and thus compliance rate for measurement of PSA levels is high (91\% in PRIAS). Most importantly, it was found in PRIAS that PSA-DT was indicative of GR \citep{bokhorst2015compliance}. The information from PSA was however not fully utilized. More specifically, when PSA was observed to be stable, patients/doctors in PRIAS not always complied with the biopsy schedule. In this regard, the usage of joint models allows more sophisticated modeling of PSA levels and information from repeat biopsies than PRIAS, and thus offers a more informative decision making process.
-
-The rest of the paper is organized as follows. Section \ref{sec : jm_framework} covers briefly the joint modeling framework. Section \ref{sec : pers_sched_approaches} details the personalized scheduling approaches we have proposed in this paper. In section \ref{sec : choosing_schedule} we discuss criteria for evaluation of the efficacy of a schedule and the choice of the most optimal schedule. In Section \ref{sec : pers_schedule_PRIAS} we demonstrate the functioning of personalized schedules by employing them for the patients from the PRIAS program. Lastly, in Section \ref{sec: simulation_study}, we present the results from a simulation study we conducted to compare personalized schedules with PRIAS and annual schedule.
+The rest of the paper is organized as follows. Section \ref{sec : jm_framework} briefly covers the joint modeling framework. Section \ref{sec : pers_sched_approaches} details the personalized scheduling approaches we have proposed in this paper. In Section \ref{sec : choosing_schedule} we discuss criteria for evaluation of the efficacy of a schedule and the choice of the optimal schedule. In Section \ref{sec : pers_schedule_PRIAS} we demonstrate the personalized schedules by employing them for the patients from the PRIAS program. Lastly, in Section \ref{sec: simulation_study}, we present the results from a simulation study we conducted to compare personalized schedules with PRIAS and annual schedule.
