--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/pers_biopsy_framework.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/pers_biopsy_framework.tex
@@ -1,7 +1,7 @@
 % !TEX root =  ../pers_schedules.tex 
 \section{Personalized schedules for repeat biopsies}
 \label{sec : pers_sched_approaches}
-Once a joint model for GR and PSA levels is obtained, the next step is to use it to create personalized schedules for biopsies. To elucidate personalized schedules, let us assume that a personalized schedule is to be created for a new patient enumerated $j$, who is not present in the original sample of patients $\mathcal{D}_n$. Further let us assume that this patient did not have a GR at his last biopsy performed at time $t$, and that the PSA levels are available up to a time point $s$. The goal is to find the optimal time $u \geq \text{max}(t,s)$ of the next biopsy. 
+Once a joint model for GR and PSA levels is obtained, the next step is to use it to create personalized schedules for biopsies. To elucidate personalized schedules, let us assume that a personalized schedule is to be created for a new patient $j$, who is not present in the original sample of patients $\mathcal{D}_n$. Further let us assume that this patient did not have a GR at his last biopsy performed at time $t$, and that the PSA levels are available up to a time point $s$. The goal is to find the optimal time $u \geq \mbox{max}(t,s)$ of the next biopsy. 
 
 \input{mainmatter/pers_sched_framework/ppd_time_to_GR}
 \input{mainmatter/pers_sched_framework/loss_functions}
@@ -9,13 +9,19 @@ Once a joint model for GR and PSA levels is obtained, the next step is to use it
 
 \subsection{Algorithm}
 \label{subsec : pers_sched_algorithm}
-Given the various methods for personalized schedules, the next step is to iteratively create an entire schedule until GR is detected for the patient. To this end, the algorithm in Figure \ref{fig : sched_algorithm} elucidates the process of creating a personalized schedule for patient $j$. Since PRIAS and most AS programs strongly advise against conducting more than 1 biopsy per year, the algorithm adjusts the optimal time $u$ of biopsy in case the last biopsy was performed less than an year ago.
+The aforementioned personalized schedules, schedule biopsy at a time $u > \mbox{max}(t,s)$. However, if time $u < T^*_j$, then GR is not detected at $u$ and at least one more biopsy is required at an optimal time $u^{new} > \mbox{max}(u,s)$. This process is iteratively repeated until GR is detected. We elucidate this process via an algorithm in Figure \ref{fig : sched_algorithm}. Since it is required by PRIAS that biopsies are conducted at a gap of at least one year, when $u - t < 1$, the algorithm postpones $u$ to $t + 1$, because it is the time nearest to $u$, at which the one year gap condition is satisfied.
 
 %When submitting replace figure with figure* to make it span an entire column
 %With referee option it gives an error
-\begin{figure}
+
+%\begin{figure}
+%\label{fig : sched_algorithm}
+%\centerline{\input{mainmatter/pers_sched_framework/algorithm}}
+%\caption{Algorithm for creating a personalized schedule for patient $j$. The time of the latest biopsy is denoted by $t$. The time of the latest available PSA measurement is denoted by $s$. The proposed personalized time of biopsy is denoted by $u$.  The time at which a repeat biopsy was proposed on the last visit to the hospital is denoted by $u^{pv}$. The time of the next visit for the measurement of PSA is denoted by $T^{nv}$.} 
+%\end{figure}
+
+\begin{figure*}
 \label{fig : sched_algorithm}
-\centerline{\input{mainmatter/pers_sched_framework/algorithm}}
-%\centerline{\includegraphics[width=0.5\textwidth]{mainmatter/pers_sched_framework/algorithm.tikz}}
-\caption{Algorithm for creating a personalized schedule for patient $j$. $t$ denotes the time of the latest biopsy. $s$ denotes the time of the latest available PSA measurement. $u$ denotes the proposed time of personalized biopsy based on $g(T^*_j)$.  $u^{pv}$ denotes the time at which a repeat biopsy was proposed at the last visit to the hospital. $T^{nv}$ denotes the time of the next visit for PSA measurement.} 
-\end{figure}
+\centerline{\input{mainmatter/pers_sched_framework/algorithm_two_col}}
+\caption{Algorithm for creating a personalized schedule for patient $j$. $t$ denotes the time of the latest biopsy. $s$ denotes the time of the latest available PSA measurement. $u$ denotes the proposed personalized time of biopsy.  $u^{pv}$ denotes the time at which a repeat biopsy was proposed on the last visit to the hospital. $T^{nv}$ denotes the time of the next visit for measurement of PSA.} 
+\end{figure*}
